<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_timer"
        android:icon="@drawable/ic_timer"
        android:title="@string/title_timer" />

    <item
        android:id="@+id/navigation_mood"
        android:icon="@drawable/ic_mood"
        android:title="@string/title_mood" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_todolist"
        android:icon="@drawable/ic_todolist"
        android:title="@string/title_todo" />

    <item
        android:id="@+id/navigation_appinfo"
        android:icon="@drawable/ic_info"
        android:title="@string/title_appinfo" />

</menu>